# openGLQt_Playground

./: README.md  meson.build  meson_options.txt
fbo/: CameraControls.qml  GraphicsWindow.qml  chartwrapper.cpp  chartwrapper.h  fbo.qrc  main.cpp  main.qml  myframebufferobject.cpp  myframebufferobject.h
general_inc/: OBB.h  billboard.h  camera_two.h  cube_map.h  delaunay_2_5D.h  ellipsoid.h  line.h  mesh.h  model.h  orbital_camera.h  paths.h  point.h  polygon.h  shader.h  text.h  utilities.h
lib/: CameraControls.qml
resources/objects/backpack/: backpack.mtl
resources/objects/earth/: Earth 2K.mtl
resources/objects/natural_earth/: natural_earth_110m.mtl  natural_earth_110m_rough.mtl  natural_earth_50m.mtl  natural_earth_50m_NZ_removed.mtl
resources/objects/rocket_v1/: 12217_rocket_v1_l1.mtl
shaders/: billboard.fs  billboard.gs  line_shader.gs  point.gs  polygon.fs  text.fs  text.vs
subprojects/: cdt.wrap  cgal.wrap  delaunator.wrap  earcut.wrap  eigen.wrap  fmt.wrap  freetype.wrap  lagan.wrap  poly2tri.wrap  pugixml.wrap  spdlog.wrap
